--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
 </head>
 <body>
 <h1>Hello World!</h1>
+<img src="http://dl.zhishi.sina.com.cn/upload/88/04/85/1057880485.13704286.JPG"></img>
 </body>
 </html>
